--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: space-between;
+  align-items: top;
+  background-color: white;
+  color: black;
+  width: 100%;
 }
 
 h1 {
