--- a/src/festures/Navigation/navigation.style.css
+++ b/src/festures/Navigation/navigation.style.css
@@ -5,17 +5,18 @@ body {
 }
 
 .navigationHolder {
-  max-width: 100%;
-  height: 100px;
+  max-width: 1600px;
+  height: 110px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1800px;
   width: 100%;
   gap: 30px;
   background-color: white;
   position: fixed;
   z-index: 100;
+  top: -5px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
 .navigationLink {
@@ -23,9 +24,15 @@ body {
   width: 100%;
   display: flex;
   gap: 25px;
-  font-size: 24px;
-  margin-left: 250px;
+  font-size: 28px;
+  margin-left: 5px;
   text-transform: uppercase;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.navigationLink a:hover {
+  text-shadow: -2px -2px rgb(62, 45, 149);
+  color: rgb(62, 45, 149);
 }
 
 .logos img {
@@ -40,4 +47,15 @@ body {
   align-items: center;
   max-width: 150px;
   width: 100%;
+  margin-right: 20px;
+  gap: 10px;
+}
+
+.logos:hover {
+  cursor: pointer;
+}
+
+.logoPictures {
+  margin: 35px 20px;
+  padding-top: 0px;
 }
