create page three, four and five

--- a/src/festures/HomePage/homePage.style.css
+++ b/src/festures/HomePage/homePage.style.css
@@ -1,5 +1,5 @@
 .homePageHolder {
-  max-width: 1400px;
+  max-width: 1600px;
   width: 100%;
-  padding-left: 60px;
+  /* padding-left: 60px; */
 }
