--- a/src/festures/HomePage/styles/pageOne.style.css
+++ b/src/festures/HomePage/styles/pageOne.style.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 420px;
   position: absolute;
+  padding-left: 55px;
 }
 
 .pageOneText {
@@ -20,14 +21,15 @@
   z-index: 30;
   top: 180px;
   color: white;
-  font-size: 28px;
+  font-size: 26px;
   display: flex;
   max-width: 1500px;
   width: 100%;
   gap: 80px;
   justify-content: center;
   font-style: italic;
-  text-shadow: 1px 3px grey;
+  text-shadow: 1px 2px grey;
+  text-transform: uppercase;
 }
 
 .pageOneTextLeft {
