--- a/src/festures/Offer/components/mobile/mobile.style.css
+++ b/src/festures/Offer/components/mobile/mobile.style.css
@@ -1,4 +1,9 @@
 .mobileWrapper {
   padding-top: 130px;
-  height: 100vh;
+  background-color: white;
+}
+
+.mobileDataList {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
 }
