--- a/src/festures/Navigation/navigation.style.css
+++ b/src/festures/Navigation/navigation.style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .navigationHolder {
-  max-width: 1600px;
+  max-width: 1650px;
   height: 110px;
   display: flex;
   justify-content: space-between;
@@ -15,6 +15,7 @@ body {
   position: fixed;
   z-index: 100;
   top: -5px;
+  left: -2px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
