--- a/src/components/item/item.style.css
+++ b/src/components/item/item.style.css
@@ -1,30 +1,48 @@
 .itemHolder {
-  max-width: 100%;
-  height: 100vh;
+  max-width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  animation: 1.5s mobileCard ease-in-out;
 }
 
 .itemCard {
   max-width: 300px;
   width: 100%;
-  height: 450px;
+  height: 550px;
   border-radius: 5px;
-  margin-top: 100px;
+  margin-top: 60px;
   flex-direction: column;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+@keyframes mobileCard {
+  0% {
+    opacity: 0.2;
+  }
+  25% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .cardImages {
   max-width: 300px;
   width: 100%;
   height: 300px;
+  padding-top: 10px;
 }
 
 .cardData {
   padding-left: 15px;
+  padding-top: 15px;
 }
 
 .cardData h2,
@@ -41,11 +59,55 @@ p {
 .mobileDataAndPrice h3 {
   padding-right: 20px;
   font-size: 22px;
-  padding-top: 5px;
+  padding-top: 20px;
 }
 
 .mobileDataAndPrice span {
   color: rgb(235, 47, 40);
-  font-size: 34px;
-  padding-left: 10px;
+  font-size: 28px;
+  padding-left: 5px;
+}
+
+.buttonDiv {
+  position: absolute;
+}
+
+.cardData button {
+  background: none;
+  max-width: 200px;
+  width: 100%;
+  height: 50px;
+  border: 1px solid black;
+  border-radius: 25px;
+  color: black;
+  margin-left: 18px;
+  font-weight: bold;
+  margin-top: 5px;
+  transition: color 0.4s linear;
+  position: relative;
+  left: 16px;
+}
+
+.cardData button:hover {
+  color: #fff;
+  background-color: red;
+}
+
+.cardData button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  border-radius: 25px;
+  z-index: -1;
+  /* transition: transform 300ms ease-in-out; NEĆE TRANSFORM DA RADI */
+  transform-origin: left;
+  transform: scaleX(0);
+}
+
+.cardData button:hover::after {
+  transform: scaleX(1);
 }
