--- a/src/festures/HomePage/styles/pageFour.style.css
+++ b/src/festures/HomePage/styles/pageFour.style.css
@@ -1,6 +1,6 @@
 .fourPageWrapper {
   background-color: rgb(157, 156, 156);
-  height: 320px;
+  height: 240px;
   width: 100%;
   max-width: 1600px;
   padding: 0;
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: space-around;
   align-items: top;
-  margin-top: 30px;
+  padding-top: 100px;
 }
 
 .creditCard img {
