--- a/src/festures/HomePage/styles/pageTwo.style.css
+++ b/src/festures/HomePage/styles/pageTwo.style.css
@@ -6,10 +6,11 @@
 }
 .pageTwoHolder h2 {
   font-size: 55px;
-  font-style: italic;
+  text-transform: uppercase;
   text-shadow: 1px 3px grey;
   text-align: center;
   color: rgb(62, 62, 83);
+  padding-top: 50px;
 }
 
 .sides {
