--- a/src/festures/Offer/components/mobile/mobile.style.css
+++ b/src/festures/Offer/components/mobile/mobile.style.css
@@ -1,9 +1,11 @@
 .mobileWrapper {
   padding-top: 130px;
   background-color: white;
+  padding-bottom: 20px;
+  width: 100%;
 }
 
 .mobileDataList {
   display: grid;
-  grid-template-columns: repeat(4, 2fr);
+  grid-template-columns: repeat(5, 2fr);
 }
