--- a/src/components/item/item.style.css
+++ b/src/components/item/item.style.css
@@ -34,10 +34,11 @@
 }
 
 .cardImages {
-  max-width: 300px;
+  max-width: 330px;
   width: 100%;
   height: 300px;
-  padding-top: 10px;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
 
 .cardData {
