--- a/src/components/item/item.style.css
+++ b/src/components/item/item.style.css
@@ -104,11 +104,16 @@ p {
   background-color: red;
   border-radius: 25px;
   z-index: -1;
-  /* transition: transform 300ms ease-in-out; NEĆE TRANSFORM DA RADI */
+  transition: 300ms ease-in-out;
   transform-origin: left;
   transform: scaleX(0);
 }
 
 .cardData button:hover::after {
   transform: scaleX(1);
+}
+
+.i {
+  font-size: 16px;
+  padding-right: 3px;
 }
