--- a/src/festures/Offer/components/laptop/laptopNavigation/laptopNavigation.style.css
+++ b/src/festures/Offer/components/laptop/laptopNavigation/laptopNavigation.style.css
@@ -1,14 +1,15 @@
-.mobileNavWrapper {
-  max-width: 1400px;
+.laptopWrapper {
+  max-width: 1600px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   margin: 0 auto;
+  background-color: white;
 }
 
-.mobileNavHolder {
+.laptopHolder {
   gap: 50px;
   font-size: 28px;
   color: black;
@@ -22,13 +23,7 @@
   padding-top: 30px;
 }
 
-.mobileNavHolder a:hover {
-  text-shadow: -1px -1px rgb(62, 45, 149);
-  color: rgb(62, 45, 149);
-  font-weight: 600;
-}
-
-.mobileNavHolder img {
+.laptopHolder img {
   max-width: 100px;
   width: 100%;
   height: 50px;
@@ -36,25 +31,20 @@
   filter: grayscale(1);
 }
 
-.mobileNavHolder img:hover {
+.laptopHolder img:hover {
   filter: grayscale(0);
 }
 
-.mobileNavHolder a {
+.laptopHolder a:hover {
+  text-shadow: -1px -1px rgb(62, 45, 149);
+  color: rgb(62, 45, 149);
+  font-weight: 600;
+}
+
+.laptopHolder a {
   font-size: 34px;
   border: none;
   background-color: white;
   color: blue;
   cursor: pointer;
-}
-
-.allPhone:hover {
-  color: blueviolet;
-  font-size: 38px;
-}
-
-.logoButton {
-  border: none;
-  cursor: pointer;
-  background-color: white;
 }
