--- a/src/festures/Cart/cart.style.css
+++ b/src/festures/Cart/cart.style.css
@@ -1,7 +1,7 @@
 .cartWrapper {
   width: 100%;
-  height: 100vh;
-  background: white;
+  max-width: 1400px;
+  background-color: white;
   display: flex;
   justify-content: top;
   align-items: center;
@@ -13,11 +13,13 @@
   margin-top: 110px;
   max-width: 1200px;
   width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   gap: 10px;
+  background-color: white;
+  text-align: top;
 }
 
 .cartHolder h1 {
