--- a/src/festures/Navigation/navigation.style.css
+++ b/src/festures/Navigation/navigation.style.css
@@ -24,10 +24,10 @@ body {
   width: 100%;
   display: flex;
   gap: 25px;
-  font-size: 28px;
-  margin-left: 40px;
+  font-size: 24px;
+
   text-transform: uppercase;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .navigationLink a:hover {
